--- a/_data/pubs.yml
+++ b/_data/pubs.yml
@@ -1,29 +1,55 @@
-- title:   "Fast-Fourier-Forecasting Resource Utilisation in Distributed Systems"
-  author:  "Paul J. Pritz, Daniel Perez, Kin K. Leung"
-  journal: "arXiv preprint"
-  note: "Accepted to ICCCN 2020."
-  year:    "2020"
-  url:     "https://arxiv.org/abs/2001.04281"
+- title: "Fast-Fourier-Forecasting Resource Utilisation in Distributed Systems"
+  author: "Paul J. Pritz, Daniel Perez, Kin K. Leung"
+  journal: "29th International Conference on Computer Communications and Networks (ICCCN)"
+  year: "2020"
+  url: "https://arxiv.org/abs/2001.04281"
   pdf:
     - name: "arXiv"
-      url:  "https://arxiv.org/pdf/2001.04281.pdf"
+      url: "https://arxiv.org/pdf/2001.04281.pdf"
 
-- title:   "Step on the Gas? A Better Approach for Recommending the Ethereum Gas Price"
-  author:  "Sam M. Werner, Paul J. Pritz, Daniel Perez"
-  journal: "arXiv preprint"
-  note:    "Accepted to Marble 2020."
-  year:    "2020"
-  url:     "https://arxiv.org/abs/2003.03479"
+- title: "Step on the Gas? A Better Approach for Recommending the Ethereum Gas Price"
+  author: "Sam M. Werner, Paul J. Pritz, Daniel Perez"
+  journal: "Mathematical Research for Blockchain Economy: 2nd International Conference MARBLE 2020, Vilamoura, Portugal"
+  year: "2020"
+  url: "https://arxiv.org/abs/2003.03479"
   pdf:
     - name: "arXiv"
-      url:  "https://arxiv.org/pdf/2003.03479.pdf"
+      url: "https://arxiv.org/pdf/2003.03479.pdf"
 
-- title:   "Uncle Traps: Harvesting Rewards in a Queue-based Ethereum Mining Pool"
-  author:  "Sam M. Werner, Paul J. Pritz, Alexei Zamyatin, William J. Knottenbelt"
+- title: "Jointly-learned State-Action Embedding for Efficient Reinforcement Learning"
+  author: "Paul J. Pritz, Liang Ma, Kin K. Leung"
+  journal: "Proceedings of the 30th ACM International Conference on Information & Knowledge Management (CIKM)"
+  year: "2021"
+  url: "https://dl.acm.org/doi/10.1145/3459637.3482052"
+  pdf:
+    - name: "ACM"
+      url: "https://dl.acm.org/doi/pdf/10.1145/3459637.3482052"
+
+- title: "Modeling of Human Group Coordination"
+  author: "Hannes Hornischer, Paul J. Pritz, Johannes Pritz, Marco G. Mazza, Margarete Boos"
+  journal: "Physical Review Research"
+  note: "Vol. 4, No. 2, pp. 23–37."
+  year: "2022"
+  url: "https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.4.023037"
+  pdf:
+    - name: "APS"
+      url: "https://journals.aps.org/prresearch/pdf/10.1103/PhysRevResearch.4.023037"
+
+- title: "Uncle Traps: Harvesting Rewards in a Queue-based Ethereum Mining Pool"
+  author: "Sam M. Werner, Paul J. Pritz, Alexei Zamyatin, William J. Knottenbelt"
   journal: "Proceedings of the 12th EAI International Conference on Performance Evaluation Methodologies and Tools"
-  note:    "Received Best Presentation Award."
-  year:    "2019"
-  url:     "https://dl.acm.org/doi/pdf/10.1145/3306309.3306328"
+  note: "Received Best Presentation Award."
+  year: "2019"
+  url: "https://dl.acm.org/doi/pdf/10.1145/3306309.3306328"
   pdf:
     - name: "dl.acm.org"
-      url:  "https://dl.acm.org/doi/pdf/10.1145/3306309.3306328"
+      url: "https://dl.acm.org/doi/pdf/10.1145/3306309.3306328"
+
+- title: "Belief States for Multi-Agent Reinforcement Learning under Partial Observability"
+  author: "Paul J. Pritz, Kin K. Leung"
+  journal: "arXiv preprint arXiv:2504.08417"
+  year: "2025"
+  url: "https://arxiv.org/abs/2504.08417"
+  pdf:
+    - name: "arXiv"
+      url: "https://arxiv.org/pdf/2504.08417.pdf"
