posts and talks

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ author:
   google_scholar_username: QgQIRl4AAAAJ&hl
   github_username: pauljpritz
   linkedin_username: paul-pritz-241978108
+  twitter_username: pauljpritz
 
 # Build settings
 markdown: kramdown
