--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ author:
   name: Paul Pritz
   email: paulj.pritz[at]gmail.com
   google_scholar_username: QgQIRl4AAAAJ&hl
-  github_username: pauljpritz
+  github_username: paulpritz
   linkedin_username: paul-pritz-241978108
   twitter_username: pauljpritz
 
